--- a/support/Formatting/style.css
+++ b/support/Formatting/style.css
@@ -11,7 +11,7 @@ html {
 body {
     margin: 0;
     background: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: -apple-system, 'Segoe UI', sans-serif;
 }
 
 article#testCases {
@@ -70,6 +70,7 @@ button {
 button#runAll {
     background: black;
     color: white;
+    font-size: 1rem;
 }
 
 #latestResult {
