--- a/support/Formatting/style.css
+++ b/support/Formatting/style.css
@@ -14,11 +14,16 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-article#testCases {
+details#manualControls {
     margin: 1em;
     background: rgb(240, 240, 240);
     border-radius: var(--border-radius);
-    padding: 1em 0 1em 0;
+    padding: 1em;
+    display: block;
+}
+
+details#manualControls summary {
+    font-weight: 600;
 }
 
 header#results {
@@ -72,11 +77,7 @@ button#runAll {
     color: white;
 }
 
-#latestResult {
-    line-height: 2;
-
-}
-
+span#latestTestValue,
 time#latestResultValue {
     background: black;
     color: white;
@@ -84,8 +85,9 @@ time#latestResultValue {
     padding-left: 0.5rem;
     padding-right: 0.5rem;    
     font-weight: 600;
-    font-size: 1.75em;
+    font-size: 1.5em;
     border-radius: var(--border-radius);
+    vertical-align: middle;
 }
 
 p#queryParametersHelp {
