Visual and naming tweaks

--- a/support/Formatting/style.css
+++ b/support/Formatting/style.css
@@ -75,7 +75,8 @@ button {
 button#runAll {
     background: black;
     color: white;
-    font-size: 1rem;
+    font-size: 1.25rem;
+    vertical-align: middle;
 }
 
 span#latestTestValue,
